# autolang

./: .gitignore  AGENTS.md  LICENSE  README.md  TT_PROMPT.md  pyproject.toml
.github/workflows/: publish.yml
benchmark/: complex_fstring_benchmark.py
benchmark/locales/: es.toml
docs/plans/: 2026-03-15-sync-placeholder-validation-design.md  2026-03-15-sync-placeholder-validation.md  2026-03-15-translate-per-key-design.md  2026-03-15-translate-per-key.md  2026-03-15-translate-progress-persistence-design.md  2026-03-15-translate-progress-persistence.md  2026-03-15-translate-tt-prompt.md
i18n/: PROMPT.md
i18n/ar/LC_MESSAGES/: messages.po
i18n/de/LC_MESSAGES/: messages.po
i18n/en/LC_MESSAGES/: messages.po
i18n/es/LC_MESSAGES/: messages.po
i18n/fr/LC_MESSAGES/: messages.po
i18n/ja/LC_MESSAGES/: messages.po
i18n/ru/LC_MESSAGES/: messages.po
i18n/zh/LC_MESSAGES/: messages.po
i18n/zh_Hant/LC_MESSAGES/: messages.po
src/autolang/: __init__.py  __main__.py  babel.py  cli.py  config.py  i18n.py  project_layout.py  source_templates.py  toml_io.py  translator.py
src/autolang/cli/: __init__.py  collect.py  common.py  extractors.py  init.py  placeholders.py  pyright_lsp.py  static_analysis.py  sync.py  translate.py
src/autolang/commands/: __init__.py  init.py  sync.py  translate.py
src/autolang/i18n/ar/LC_MESSAGES/: messages.po
src/autolang/i18n/de/LC_MESSAGES/: messages.po
src/autolang/i18n/en/LC_MESSAGES/: messages.po
src/autolang/i18n/es/LC_MESSAGES/: messages.po
src/autolang/i18n/fr/LC_MESSAGES/: messages.po
src/autolang/i18n/ja/LC_MESSAGES/: messages.po
src/autolang/i18n/ru/LC_MESSAGES/: messages.po
src/autolang/i18n/zh/LC_MESSAGES/: messages.po
src/autolang/i18n/zh_Hant/LC_MESSAGES/: messages.po
src/autolang/locales/: ar.toml  de.toml  en.toml  es.toml  fr.toml  ja.toml  ru.toml  zh.toml  zh_Hant.toml
src/transparentlation/: __init__.py  cli.py  translator.py
tests/: conftest.py  test_benchmark.py  test_cli.py  test_core.py  test_public_api.py  test_static_analysis.py  test_toml_io.py  test_translator.py
tests/commands/: test_init.py  test_sync.py  test_translate.py
tests/locales/: es.toml
