[build-system]
requires = ["uv_build >= 0.10.7, <0.11.0"]
build-backend = "uv_build"

[project]
name = "autolang"
version = "0.1.0"
description = "Transparent i18n for Python f-strings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "babel>=2.18.0",
    "executing>=2.2.1",
    "jedi>=0.19.2",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
tt = "autolang.cli:main"
autolang = "autolang.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
typeCheckingMode = "standard"

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.15.6",
]
