[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "autolang"
dynamic = ["version"]
description = "Transparent i18n for Python f-strings."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "babel>=2.18.0",
    "executing>=2.2.1",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
cli = [
    "basedpyright>=1.38.2",
    "tqdm>=4.67.3",
]

[project.scripts]
tt = "autolang.cli:main"
autolang = "autolang.cli:main"

[tool.setuptools_scm]
# 从 git tag 自动生成版本号
version_scheme = "guess-next-dev"
# for dependabot to work
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
typeCheckingMode = "standard"

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.15.6",
    "tqdm>=4.67.3",
]
